--- a/object+gravity_test.html
+++ b/object+gravity_test.html
@@ -2,7 +2,7 @@
   
   <head>
     <script src="p5/p5.min.js"></script>
-    <script src="p5.collide2D-master/p5.collide2d.min.js"></script>
+    <script src="p5.collide2d.min.js"></script>
     <script src="lib/p5.sound.js"></script>
     <script src="jumper.js"></script>
     <script src="obstacle.js"></script>
