--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   
   <head>
-    <script src="p5/p5.min.js"></script>
+    <script src="p5.min.js"></script>
     <script src="p5.collide2d.min.js"></script>
     <script src="lib/p5.sound.js"></script>
     <script src="jumper.js"></script>
